// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordRepo find Should find records 1`] = `
Object {
  "bindVars": Object {
    "@collection": "test_lib",
  },
  "query": "FOR r IN @@collection RETURN r",
}
`;

exports[`RecordRepo find with filters Should filter records - simple 1`] = `
Object {
  "bindVars": Object {
    "@collection": "test_lib",
    "filterField0": "test_attr",
    "filterField1": "test_attr2",
    "filterValue0": "test",
    "filterValue1": "test2",
  },
  "query": "FOR r IN @@collection FILTER r.@filterField0 == @filterValue0 FILTER r.@filterField1 == @filterValue1 RETURN r",
}
`;
